# robocup_pepper-dialogue_hri

dialogue_hri_action/: CMakeLists.txt
dialogue_hri_action/action/: DialogueSendSignal.action  DialogueStartScenario.action
dialogue_hri_node/: CMakeLists.txt  package.xml
dialogue_hri_node/launch/: hri_mng.launch
dialogue_hri_node/scripts/: DialogueHri.py  DialogueHriTestAction.py  GetImageHri.py  MoveSoundHri.py  MoveTurnRobot.py
dialogue_hri_srv/: CMakeLists.txt  package.xml
